# edpad

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  TODO  b.go  configure.ac  edpad.conf  edpad.css  edpad.css.in  edpad.glade  edpad.go  go.mod  go.sum  m.go  main.go  vars.sh
addons/: edpad.sh  x52mfd.sh
addons/launcher-10/: 01635949180.desktop
addons/launcher-9/: 01635948936.desktop
cfg/: cfg.go
cmd/edpad/: main.go
conf/: conf.go
display/: display.go  xdo.go
edsm/: discard.go  edsm.go
event/: FSDJump.go  FSDTarget.go  FSSBodySignals.go  FSSDiscoveryScan.go  FSSSignalDiscovered.go  SAAScanComplete.go  SAASignalsFound.go  Scan.go  StartJump.go  event.go
file/: file.go
internal/cfg/: cfg.go
internal/display/: display.go
internal/edsm/: edsm.go
internal/event/: FSDJump.go  FSDTarget.go  Scan.go  event.go
internal/file/: file.go
internal/joystick/: joystick.go
internal/parser/: journal.go  parser.go
internal/socket/: socket.go
internal/sound/: sound.go
internal/xdo/: xdo.go
log/: log.go
parser/: evFSDJump.go  evFSDTarget.go  evFSSBodySignals.go  evFSSDiscoveryScan.go  evFSSSignalDiscovered.go  evSAAScanComplete.go  evSAASignalsFound.go  evScan.go  evStartJump.go  journal.go  joystick.go  parser.go
resources/: edpad.css  edpad.css.in  edpad.glade
socket/: socket.go
src/: Makefile.am  bottom.c  buttons.c  edpad.c  edpad.h  edpad.ui  events_example.c  gtk_example.c  main.c  tabs.c  xkeys.c  xkeys.h
xdo/: xdo.go
