#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([edpad], [0.0.1], [maxb@tutamail.com])
AC_CONFIG_SRCDIR([])
AC_PREFIX_DEFAULT([$HOME/.local])

AC_SUBST([HOME], [$HOME])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT

